--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
     <section>
         <nav id="nav">
             <div id="logo">
-                <img src="/img/iconoBurger.jpg" height="60px" style="border-radius: 10px;" alt="Logo">
+                <img src="/img/iconoBurger.jpg" height="60" style="border-radius: 10px;" alt="Logo">
             </div>
             <div id="titulo">
                 <h1>ByteBurger</h1>
@@ -81,12 +81,12 @@
     </section>
     <section id="seccionProductos">
         <div id="productosTitulo">
-            <p>Productos</p>
+            <h3>Productos</h3>
         </div>
         <div id="productos">
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burgaPHP.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burgaPHP.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd">PHP</p>
@@ -96,7 +96,7 @@
             </div>
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burgaJavaScript.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burgaJavaScript.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd">JavaScript</p>
@@ -106,7 +106,7 @@
             </div>
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burgaJava.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burgaJava.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd">Java</p>
@@ -116,7 +116,7 @@
             </div>
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burgaPython.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burgaPython.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd">Python</p>
@@ -126,7 +126,7 @@
             </div>
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burgaSQl.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burgaSQl.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd">SQL</p>
@@ -136,7 +136,7 @@
             </div>
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burga1.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burga1.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd">Ruby</p>
@@ -146,7 +146,7 @@
             </div>
             <div class="prod">
                 <div style="display: flex; justify-content: center;">
-                    <img src="/img/burga2.jpg" height="190px" width="250px" alt="">
+                    <img src="/img/burga2.jpg" height="190" width="250" alt="">
 
                 </div>
                 <p class="tituloProd" >Swift</p>
@@ -156,21 +156,21 @@
             </div>
         </div>
     </section>
-    <section id="galeriaImg">
+    <div id="galeriaImg">
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <img src="/img/fachadaBurger.jpg" height="250px" alt="la concha no cargo la foto">
+            <img src="/img/fachadaBurger.jpg" height="250" alt="la concha no cargo la foto">
             <p>Aca podemos visualizar nuestro local de hamburguesas el cual proporciona una buena comodidad mediant nuestras sillas y mesas, además de un buen servicio al cliente,  con el objetivo de ser llamativo y acogedor para degustar nuestras hamburguesas</p>
         </div>
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <img src="/img/brutalMostrador.jpeg" height="250px" width="350px" alt="">
+            <img src="/img/brutalMostrador.jpeg" height="250" width="350" alt="">
             <p>Nuestro local de hamburguesas proporciona una buena comodidad llevada a cabo con nuestras sillas y mesas, un buen servicio al cliente, y promociones actuales en la vidriera.</p>
         </div>
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <img src="/img/localBurger.jpeg" height="250px" alt="">
+            <img src="/img/localBurger.jpeg" height="250" alt="">
             <p>Ofrecemos un ambiente acogedor y llamativo con una decoración de caracter minimalista para no cargar el estres de las personas, de esta manera brindamos tranquilidad y armonia para degustar nuestras grandiosas hamburguesas.</p>
         </div>
-    </section>
-    <section id="reseñaImg">
+    </div>
+    <div id="reseñaImg">
         <div id="textCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" id="carouselContainer">
                 <div class="carousel-item active">
@@ -193,7 +193,7 @@
                 <span class="sr-only"></span>
             </a>
         </div>
-    </section>
+    </div>
     <section id="footer">
         <div id="redes">
             <h4>Redes</h4>
