--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -18,7 +18,7 @@
     <section>
         <nav id="nav">
             <div id="logo">
-                <img src="/img/iconoBurger.jpg" height="60px" style="border-radius: 10px;" alt="Logo">
+                <img src="/img/iconoBurger.jpg" height="60" style="border-radius: 10px;" alt="Logo">
             </div>
             <div id="titulo">
                 <h1>ByteBurger</h1>
@@ -36,9 +36,9 @@
             </div>
         </nav>
     </section>
-    <section id="banner">
-        <img src="/img/banner.png" width="100%" height="500px" alt="">
-    </section>
+    <div id="banner">
+        <img src="/img/banner.png" width="100%" height="500" alt="">
+    </div>
     <section id="infoNosotros">
         <div id="quienesSomos">
             <h3>¿Quienes somos?</h3>
