--- a/paginas/ubicaciones.html
+++ b/paginas/ubicaciones.html
@@ -18,7 +18,7 @@
     <section>
         <nav id="nav">
             <div id="logo">
-                <img src="/img/iconoBurger.jpg" height="60px" style="border-radius: 10px;" alt="Logo">
+                <img src="/img/iconoBurger.jpg" height="60" style="border-radius: 10px;" alt="Logo">
             </div>
             <div id="titulo">
                 <h1>ByteBurger</h1>
@@ -36,68 +36,64 @@
             </div>
         </nav>
     </section>
-    <section>
+    <div>
         <div>
-            <img id="bannerImg" width="100%" height="550px" src="https://cdn.discordapp.com/attachments/1095392040596025414/1176999409968484513/responsabilidad-social.png?ex=6570e91e&is=655e741e&hm=e041538d09fc1e7cb66b4393efbe9da6a5abac6dfcb96b08d950ccaacaa4dbcc&" alt="Nosotros">
+            <img id="bannerImg" width="100%" height="550" src="https://cdn.discordapp.com/attachments/1095392040596025414/1176999409968484513/responsabilidad-social.png?ex=6570e91e&is=655e741e&hm=e041538d09fc1e7cb66b4393efbe9da6a5abac6dfcb96b08d950ccaacaa4dbcc&" alt="Nosotros">
         </div>
-    </section>
-
+    </div>
     <section id="preguntasFrecuentes">
         <h2 class="text-center">Preguntas Frecuentes</h2>
-    <div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-        <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            1. ¿Cuáles son sus horarios de atención?
-        </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            Nuestros horarios pueden variar según la ubicación. Te recomendamos visitar nuestra sección "Descripciones de nuestras ubicaciones" para obtener información detallada sobre horarios.
+        <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                1. ¿Cuáles son sus horarios de atención?
+            </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                Nuestros horarios pueden variar según la ubicación. Te recomendamos visitar nuestra sección "Descripciones de nuestras ubicaciones" para obtener información detallada sobre horarios.
+            </div>
+            </div>
         </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                2. ¿Ofrecen opciones vegetarianas o veganas?
+            </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                Sí, contamos con opciones vegetarianas y veganas en nuestro menú. Puedes explorar nuestras alternativas de hamburguesas para satisfacer tus preferencias alimenticias.
+            </div>
+            </div>
         </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            2. ¿Ofrecen opciones vegetarianas o veganas?
-        </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            Sí, contamos con opciones vegetarianas y veganas en nuestro menú. Puedes explorar nuestras alternativas de hamburguesas para satisfacer tus preferencias alimenticias.
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                3. ¿Cómo puedo realizar un pedido a domicilio?
+            </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                Puedes realizar tu pedido a domicilio directamente desde nuestra página web o a través de nuestras plataformas asociadas de entrega a domicilio. Simplemente selecciona los productos que desees y sigue los pasos para completar tu pedido.
+            </div>
+            </div>
         </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                4. ¿Tienen opciones sin gluten?
+            </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                Sí, disponemos de opciones sin gluten en nuestro menú. Comunica tus restricciones alimenticias al momento de realizar tu pedido y nuestro equipo estará encantado de ayudarte.
+            </div>
+            </div>
         </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            3. ¿Cómo puedo realizar un pedido a domicilio?
-        </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            Puedes realizar tu pedido a domicilio directamente desde nuestra página web o a través de nuestras plataformas asociadas de entrega a domicilio. Simplemente selecciona los productos que desees y sigue los pasos para completar tu pedido.
-        </div>
-        </div>
-    </div>
-    <div class="accordion-item">
-        <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            4. ¿Tienen opciones sin gluten?
-        </button>
-        </h2>
-        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            Sí, disponemos de opciones sin gluten en nuestro menú. Comunica tus restricciones alimenticias al momento de realizar tu pedido y nuestro equipo estará encantado de ayudarte.
-        </div>
-        </div>
-    </div>
-    
-    </div>
     </section>
-
-    <section id="listaubicaciones">
+    <div id="listaubicaciones">
         <div>
             <h2>Nuestras Ubicaciones</h2>
             <ul>
@@ -107,8 +103,7 @@
             </ul>
 
         </div>
-    </section>
-
+    </div>
     <section id="footer">
         <div id="redes">
             <h4>Redes</h4>
