--- a/paginas/ubicaciones.html
+++ b/paginas/ubicaciones.html
@@ -40,6 +40,10 @@
         <div>
             <img id="bannerImg" width="100%" height="550" src="https://cdn.discordapp.com/attachments/1095392040596025414/1176999409968484513/responsabilidad-social.png?ex=6570e91e&is=655e741e&hm=e041538d09fc1e7cb66b4393efbe9da6a5abac6dfcb96b08d950ccaacaa4dbcc&" alt="Nosotros">
         </div>
+        <div id="descrpImg">
+            <h3>ByteBurger se compromete con la RSE, respaldando iniciativas locales y promoviendo prácticas sostenibles.
+                </h3>
+        </div>
     </div>
     <section id="preguntasFrecuentes">
         <h2 class="text-center">Preguntas Frecuentes</h2>
