--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
                 <h1>ByteBurger</h1>
             </div>
             <div id="opciones">
+                <div style="margin-top: 5px;">
+                    <a href="/index.html">Inicio</a>
+                </div>
+                <div style="margin-top: 5px;">
+                    <a href="/paginas/sobreNosotros.html">Sobre nosotros</a>
+                </div>
+                <div style="margin-top: 5px;">
+                    <a href="/paginas/ubicaciones.html">Más info</a>
+                </div>
                 <div>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"        data-bs-target="#staticBackdrop">
                         Carrito
@@ -47,37 +56,13 @@
                         </div>
                     </div>
                 </div>
-                <div style="margin-top: 5px;">
-                    <a href="/paginas/sobreNosotros.html">Sobre nosotros</a>
-                </div>
-                <div style="margin-top: 5px;">
-                    <a href="/paginas/ubicaciones.html">Ubicaciones</a>
-                </div>
             </div>
         </nav>
     </section>
     <section id="carousel">
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/img/burga3.jpg" class="d-block w-100" id="imgCar1" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/img/burga5.jpg" class="d-block w-100" id="imgCar2" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/img/burga6-irvine-3jpg.jpg" class="d-block w-100" id="imgCar3" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+        <div>
+            <img src="/img/banner.png" width="100%" height="550" alt="">
+        </div>
     </section>
     <section id="seccionProductos">
         <div id="productosTitulo">
